# ml-ab-platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
src/ml_ab_platform/: __init__.py  config.py  storage.py
src/ml_ab_platform/analysis/: __init__.py  analyzer.py  tests.py
src/ml_ab_platform/api/: __init__.py  app.py  schemas.py
src/ml_ab_platform/bandit/: __init__.py  thompson.py
src/ml_ab_platform/cli/: __init__.py  main.py
src/ml_ab_platform/dashboard/: app.py
src/ml_ab_platform/experiments/: __init__.py  manager.py  models.py  store.py
src/ml_ab_platform/logging_/: __init__.py  setup.py
src/ml_ab_platform/models/: __init__.py  data.py  registry.py  training.py
src/ml_ab_platform/routing/: __init__.py  base.py  strategies.py
src/ml_ab_platform/simulation/: __init__.py  simulator.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_bandit.py  test_canary.py  test_routing.py  test_statistics.py
